Added metrics middleware to aggregator with prometheus

--- a/compose.yml
+++ b/compose.yml
@@ -1,19 +1,19 @@
 version: "3"
 services:
-  zookeeper:
+  kafka-zookeeper:
     image: confluentinc/cp-zookeeper
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
-  broker:
+  kafka-broker:
     image: confluentinc/cp-kafka:7.3.2
     container_name: broker
     ports:
       - "9092:9092"
     depends_on:
-      - zookeeper
+      - kafka-zookeeper
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
@@ -22,3 +22,11 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+  
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
